force-app/main/default/objects/Photo_Data_Field_Mapping__mdt/Photo_Data_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This metadata contains mappings for fields used to synchronize Photo Data between external service and Salesforce. Only fields specified in this mapping will be synched.</description>
    <label>Photo Data Field Mapping</label>
    <pluralLabel>Photo Data Field Mappings</pluralLabel>
</CustomObject>