force-app/main/default/objects/Photo_Data_Field_Mapping__mdt/fields/External_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Field_Name__c</fullName>
    <description>This field contains name of the field to map from external system</description>
    <label>External Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>