force-app/main/default/objects/Photo_Data_Field_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Specifies if the field should be synchronised</description>
    <inlineHelpText>Only fields mappings marked as &apos;Is Active&apos; will be synchronised</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>