force-app/main/default/objects/Photo_Data_Field_Mapping__mdt/fields/Salesforce_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_Name__c</fullName>
    <description>This field contains name of the field to map in Salesforce</description>
    <inlineHelpText>Please put the API name here (with __c appendix)</inlineHelpText>
    <label>Salesforce Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>